Change dataset loader to hugginface datasets

--- a/examples/imagic/Imagic_Stable_Diffusion.ipynb
+++ b/examples/imagic/Imagic_Stable_Diffusion.ipynb
@@ -54,7 +54,7 @@
     "!wget -q https://github.com/katsugeneration/diffusers/raw/main/examples/imagic/fast_imagic.py\n",
     "%pip install -qq git+https://github.com/katsugeneration/diffusers\n",
     "%pip install -q -U --pre triton\n",
-    "%pip install -q accelerate==0.12.0 transformers ftfy bitsandbytes gradio"
+    "%pip install -q accelerate==0.12.0 transformers ftfy bitsandbytes gradio datasets datasets[vision]"
    ]
   },
   {
@@ -150,7 +150,7 @@
     "MODEL_NAME = \"CompVis/stable-diffusion-v1-4\" #@param {type:\"string\"}\n",
     "\n",
     "#@markdown Target Text.\n",
-    "TARGET_TEXT = \"A bird spreading wings.\" #@param {type:\"string\"}\n",
+    "TARGET_TEXT = \"A photo of person smiling with a big grin.\" #@param {type:\"string\"}\n",
     "\n",
     "#@markdown Target Dataset.\n",
     "TARGET_DATASET = \"CelebA\" #@param {type:\"string\"}\n",
@@ -203,7 +203,6 @@
     "!accelerate launch fast_imagic.py \\\n",
     "  --pretrained_model_name_or_path=$MODEL_NAME \\\n",
     "  --output_dir=$OUTPUT_DIR \\\n",
-    "  --input_image=$INPUT_IMAGE \\\n",
     "  --target_text=\"{TARGET_TEXT}\" \\\n",
     "  --target_dataset=\"{TARGET_DATASET}\" \\\n",
     "  --seed=3434554 \\\n",
