--- a/examples/imagic/Imagic_Stable_Diffusion.ipynb
+++ b/examples/imagic/Imagic_Stable_Diffusion.ipynb
@@ -213,7 +213,8 @@
     "  --emb_learning_rate=1e-3 \\\n",
     "  --learning_rate=1e-6 \\\n",
     "  --emb_train_steps=500 \\\n",
-    "  --max_train_steps=1000\n"
+    "  --max_train_steps=1000 \\\n",
+    "  --train_batch_size 1\n"
    ]
   },
   {
