--- a/examples/imagic/Style_Imagic_Stable_Diffusion.ipynb
+++ b/examples/imagic/Style_Imagic_Stable_Diffusion.ipynb
@@ -51,7 +51,7 @@
    },
    "outputs": [],
    "source": [
-    "!wget -q https://github.com/katsugeneration/diffusers/raw/main/examples/imagic/train_imagic.py\n",
+    "!wget -q https://github.com/katsugeneration/diffusers/raw/main/examples/imagic/style_imagic.py\n",
     "%pip install -qq git+https://github.com/katsugeneration/diffusers\n",
     "%pip install -q -U --pre triton\n",
     "%pip install -q accelerate==0.12.0 transformers ftfy bitsandbytes gradio"
@@ -199,7 +199,7 @@
    },
    "outputs": [],
    "source": [
-    "#@markdown Upload your 1 image by running this cell.\n",
+    "#@markdown Upload your 1 style image by running this cell.\n",
     "\n",
     "import os\n",
     "from google.colab import files\n",
@@ -239,7 +239,7 @@
    },
    "outputs": [],
    "source": [
-    "!accelerate launch train_imagic.py \\\n",
+    "!accelerate launch style_imagic.py \\\n",
     "  --pretrained_model_name_or_path=$MODEL_NAME \\\n",
     "  --output_dir=$OUTPUT_DIR \\\n",
     "  --input_image=$INPUT_IMAGE \\\n",
