Fix train ldm code

--- a/examples/ldm_clip/LDM_CLIP.ipynb
+++ b/examples/ldm_clip/LDM_CLIP.ipynb
@@ -31,7 +31,7 @@
     "id": "BzM7j0ZSc_9c"
    },
    "source": [
-    "https://github.com/ShivamShrirao/diffusers/tree/main/examples/imagic"
+    "https://github.com/ShivamShrirao/diffusers/tree/main/examples/ldm_clip"
    ]
   },
   {
@@ -51,7 +51,8 @@
    },
    "outputs": [],
    "source": [
-    "!wget -q https://github.com/katsugeneration/diffusers/raw/main/examples/imagic/train_ldm_clip.py\n",
+    "!wget -q https://github.com/katsugeneration/diffusers/raw/main/examples/ldm_clip/train_ldm_clip.py\n",
+    "!wget -q https://github.com/katsugeneration/diffusers/raw/main/examples/ldm_clip/clip_loss.py\n",
     "%pip install -qq git+https://github.com/katsugeneration/diffusers\n",
     "%pip install -q -U --pre triton\n",
     "%pip install -q accelerate==0.12.0 transformers ftfy bitsandbytes gradio datasets datasets[vision]"
@@ -150,7 +151,7 @@
     "MODEL_NAME = \"CompVis/stable-diffusion-v1-4\" #@param {type:\"string\"}\n",
     "\n",
     "#@markdown Target Text.\n",
-    "TARGET_TEXT = \"illustration.\" #@param {type:\"string\"}\n",
+    "TARGET_TEXT = \"illustration\" #@param {type:\"string\"}\n",
     "\n",
     "#@markdown Target Dataset.\n",
     "TARGET_DATASET = \"Imagenet\" #@param {type:\"string\"}\n",
@@ -162,7 +163,7 @@
     "    drive.mount('/content/drive')\n",
     "\n",
     "#@markdown Enter the directory name to save model at.\n",
-    "OUTPUT_DIR = \"stable_diffusion_weights/imagic\" #@param {type:\"string\"}\n",
+    "OUTPUT_DIR = \"stable_diffusion_weights/ldm_clip\" #@param {type:\"string\"}\n",
     "if save_to_gdrive:\n",
     "    OUTPUT_DIR = \"/content/drive/MyDrive/\" + OUTPUT_DIR\n",
     "else:\n",
