Fix ldm clip trainer

--- a/examples/ldm_clip/LDM_CLIP.ipynb
+++ b/examples/ldm_clip/LDM_CLIP.ipynb
@@ -285,8 +285,7 @@
     "model_path = OUTPUT_DIR             # If you want to use previously trained model saved in gdrive, replace this with the full path of model in gdrive\n",
     "\n",
     "scheduler = DDIMScheduler(beta_start=0.00085, beta_end=0.012, beta_schedule=\"scaled_linear\", clip_sample=False, set_alpha_to_one=False)\n",
-    "pipe = StableDiffusionImg2ImgPipeline.from_pretrained(model_path, scheduler=scheduler, torch_dtype=torch.float16).to(\"cuda\")\n",
-    "target_embeddings = torch.load(os.path.join(model_path, \"target_embeddings.pt\")).to(\"cuda\")\n",
+    "pipe = StableDiffusionImg2ImgPipeline.from_pretrained(MODEL_NAME, scheduler=scheduler, torch_dtype=torch.float16).to(\"cuda\")\n",
     "optimized_embeddings = torch.load(os.path.join(model_path, \"optimized_embeddings.pt\")).to(\"cuda\")\n",
     "g_cuda = None"
    ]
@@ -407,19 +406,16 @@
     "#@title Run for generating images.\n",
     "from PIL import Image\n",
     "\n",
-    "alpha = 0.9 #@param {type:\"number\"}\n",
     "num_samples = 4 #@param {type:\"number\"}\n",
     "guidance_scale = 3 #@param {type:\"number\"}\n",
     "num_inference_steps = 50 #@param {type:\"number\"}\n",
     "height = 512 #@param {type:\"number\"}\n",
     "width = 512 #@param {type:\"number\"}\n",
     "\n",
-    "edit_embeddings = alpha*target_embeddings + (1-alpha)*optimized_embeddings\n",
-    "\n",
     "with autocast(\"cuda\"), torch.inference_mode():\n",
     "    images = pipe(\n",
     "        init_image=Image.open(INPUT_IMAGE),\n",
-    "        text_embeddings=edit_embeddings,\n",
+    "        text_embeddings=optimized_embeddings,\n",
     "        height=height,\n",
     "        width=width,\n",
     "        num_images_per_prompt=num_samples,\n",
