--- a/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
+++ b/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
@@ -241,17 +241,16 @@
     "\n",
     "model_path = OUTPUT_DIR             # If you want to use previously trained model saved in gdrive, replace this with the full path of model in gdrive\n",
     "\n",
-    "tokenizer = CLIPTokenizer.from_pretrained(MODEL_NAME)\n",
+    "tokenizer = CLIPTokenizer.from_pretrained(MODEL_NAME, subfolder=\"tokenizer\")\n",
     "placeholder_token_id = tokenizer.convert_tokens_to_ids(PLACEHOLDER_TOKEN)\n",
-    "text_encoder = CLIPTextModel.from_pretrained(MODEL_NAME, torch_dtype=torch.float16).to(\"cuda\")\n",
-    "text_encoder.get_input_embeddings().weight[placeholder_token_id] = torch.load(os.path.join(model_path, \"learned_embeds.bin\"))[PLACEHOLDER_TOKEN].to(\"cuda\", dtype=torch.float16)\n",
+    "text_encoder = CLIPTextModel.from_pretrained(MODEL_NAME, subfolder=\"text_encoder\", torch_dtype=torch.float16).to(\"cuda\")\n",
+    "text_encoder.get_input_embeddings().weight.data[placeholder_token_id] = torch.load(os.path.join(model_path, \"learned_embeds.bin\"))[PLACEHOLDER_TOKEN].to(\"cuda\", dtype=torch.float16)\n",
     "\n",
     "scheduler = DDIMScheduler(beta_start=0.00085, beta_end=0.012, beta_schedule=\"scaled_linear\", clip_sample=False, set_alpha_to_one=False)\n",
     "pipe = StableDiffusionImg2ImgPipeline.from_pretrained(\n",
     "    MODEL_NAME,\n",
     "    text_encoder=text_encoder,\n",
     "    scheduler=scheduler, torch_dtype=torch.float16).to(\"cuda\")\n",
-    "optimized_embeddings = torch.load(os.path.join(model_path, \"optimized_embeddings.pt\")).to(\"cuda\")\n",
     "g_cuda = None"
    ]
   },
