Fix textual inversion token save

--- a/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
+++ b/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
@@ -241,10 +241,13 @@
     "\n",
     "model_path = OUTPUT_DIR             # If you want to use previously trained model saved in gdrive, replace this with the full path of model in gdrive\n",
     "\n",
-    "tokenizer = CLIPTokenizer.from_pretrained(MODEL_NAME, subfolder=\"tokenizer\")\n",
+    "tokenizer = CLIPTokenizer.from_pretrained(model_path, subfolder=\"tokenizer\")\n",
     "placeholder_token_id = tokenizer.convert_tokens_to_ids(PLACEHOLDER_TOKEN)\n",
     "text_encoder = CLIPTextModel.from_pretrained(MODEL_NAME, subfolder=\"text_encoder\", torch_dtype=torch.float16).to(\"cuda\")\n",
-    "text_encoder.get_input_embeddings().weight.data[placeholder_token_id] = torch.load(os.path.join(model_path, \"learned_embeds.bin\"))[PLACEHOLDER_TOKEN].to(\"cuda\", dtype=torch.float16)\n",
+    "text_encoder.resize_token_embeddings(len(tokenizer))\n",
+    "emb = text_encoder.get_input_embeddings()\n",
+    "emb.weight.data[placeholder_token_id] = torch.load(os.path.join(model_path, \"learned_embeds.bin\"))[PLACEHOLDER_TOKEN].to(\"cuda\", dtype=torch.float16)\n",
+    "text_encoder.set_input_embeddings(emb)\n",
     "\n",
     "scheduler = DDIMScheduler(beta_start=0.00085, beta_end=0.012, beta_schedule=\"scaled_linear\", clip_sample=False, set_alpha_to_one=False)\n",
     "pipe = StableDiffusionImg2ImgPipeline.from_pretrained(\n",
@@ -391,48 +394,6 @@
     "\n",
     "for img in images:\n",
     "    display(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "cellView": "form",
-    "id": "WMCqQ5Tcdsm2"
-   },
-   "outputs": [],
-   "source": [
-    "#@markdown Run Gradio UI for generating images.\n",
-    "import gradio as gr\n",
-    "\n",
-    "def inference(alpha, num_samples, height=512, width=512, num_inference_steps=50, guidance_scale=7.5):\n",
-    "    with torch.autocast(\"cuda\"), torch.inference_mode():\n",
-    "        edit_embeddings = alpha*target_embeddings + (1-alpha)*optimized_embeddings\n",
-    "        return pipe(\n",
-    "                text_embeddings=edit_embeddings, height=int(height), width=int(width),\n",
-    "                num_images_per_prompt=int(num_samples),\n",
-    "                num_inference_steps=int(num_inference_steps), guidance_scale=guidance_scale,\n",
-    "                generator=g_cuda\n",
-    "            ).images\n",
-    "\n",
-    "with gr.Blocks() as demo:\n",
-    "    with gr.Row():\n",
-    "        with gr.Column():\n",
-    "            alpha = gr.Number(label=\"Prompt\", value=0.9)\n",
-    "            run = gr.Button(value=\"Generate\")\n",
-    "            with gr.Row():\n",
-    "                num_samples = gr.Number(label=\"Number of Samples\", value=4)\n",
-    "                guidance_scale = gr.Number(label=\"Guidance Scale\", value=3)\n",
-    "            with gr.Row():\n",
-    "                height = gr.Number(label=\"Height\", value=512)\n",
-    "                width = gr.Number(label=\"Width\", value=512)\n",
-    "            num_inference_steps = gr.Slider(label=\"Steps\", value=50)\n",
-    "        with gr.Column():\n",
-    "            gallery = gr.Gallery()\n",
-    "\n",
-    "    run.click(inference, inputs=[alpha, num_samples, height, width, num_inference_steps, guidance_scale], outputs=gallery)\n",
-    "\n",
-    "demo.launch(debug=True)"
    ]
   },
   {
