--- a/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
+++ b/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
@@ -195,6 +195,7 @@
     "!accelerate launch textual_inversion.py \\\n",
     "  --pretrained_model_name_or_path=$MODEL_NAME \\\n",
     "  --output_dir=$OUTPUT_DIR \\\n",
+    "  --learnable_property \"style\" \\\n",
     "  --placeholder_token=\"{PLACEHOLDER_TOKEN}\" \\\n",
     "  --initializer_token=\"{INITILIZER_TOKEN}\" \\\n",
     "  --train_data_dir=\"{TRAIN_DATA_DIR}\" \\\n",
