--- a/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
+++ b/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
@@ -253,6 +253,7 @@
     "scheduler = DDIMScheduler(beta_start=0.00085, beta_end=0.012, beta_schedule=\"scaled_linear\", clip_sample=False, set_alpha_to_one=False)\n",
     "pipe = StableDiffusionImg2ImgPipeline.from_pretrained(\n",
     "    MODEL_NAME,\n",
+    "    tokenizer=tokenizer,\n",
     "    text_encoder=text_encoder,\n",
     "    scheduler=scheduler, torch_dtype=torch.float16).to(\"cuda\")\n",
     "g_cuda = None"
