Update textual inversion run parameter

--- a/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
+++ b/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
@@ -199,21 +199,12 @@
     "  --placeholder_token=\"{PLACEHOLDER_TOKEN}\" \\\n",
     "  --initializer_token=\"{INITILIZER_TOKEN}\" \\\n",
     "  --train_data_dir=\"{TRAIN_DATA_DIR}\" \\\n",
-    "  --seed=3434554 \\\n",
+    "  --seed=42 \\\n",
     "  --resolution=512 \\\n",
-    "  --mixed_precision=\"fp16\" \\\n",
-    "  --gradient_accumulation_steps=1 \\\n",
-    "  --learning_rate=1e-4 \\\n",
-    "  --max_train_steps=5000\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "5V8wgU0HN-Kq"
-   },
-   "source": [
-    "## Convert weights to ckpt to use in web UIs like AUTOMATIC1111."
+    "  --gradient_accumulation_steps=4 \\\n",
+    "  --learning_rate=5e-4 \\\n",
+    "  --max_train_steps=3000 \\\n",
+    "  --train_batch_size 1\n"
    ]
   },
   {
