Update default parameter

--- a/examples/diffedit/DiffEdit.ipynb
+++ b/examples/diffedit/DiffEdit.ipynb
@@ -132,7 +132,8 @@
         "\n",
         "num_samples = 4 #@param {type:\"number\"}\n",
         "prompt = \"zebra\" #@param {type:\"string\"}\n",
-        "guidance_scale = 7.5 #@param {type:\"number\"}\n",
+        "guidance_scale = 5 #@param {type:\"number\"}\n",
+        "strength = 0.7 #@param {type:\"number\"}\n",
         "diffedit_noise_ratio = 0.5 #@param {type:\"number\"}\n",
         "num_inference_steps = 50 #@param {type:\"number\"}\n",
         "height = 512 #@param {type:\"number\"}\n",
@@ -153,6 +154,7 @@
         "        num_images_per_prompt=num_samples,\n",
         "        num_inference_steps=num_inference_steps,\n",
         "        guidance_scale=guidance_scale,\n",
+        "        strength=strength,\n",
         "        diffedit_noise_ratio=diffedit_noise_ratio,\n",
         "        generator=g_cuda\n",
         "    ).images\n",
@@ -170,11 +172,18 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.8.5 ('ldm')",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.8.5"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "8cbe85b93bcb5c405fe05dd07f9fc1e9da0254e95ad5e59bcee340886e7ffdd3"
+      }
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
