Add diffedit_reference_text option

--- a/examples/diffedit/DiffEdit.ipynb
+++ b/examples/diffedit/DiffEdit.ipynb
@@ -132,9 +132,10 @@
         "\n",
         "num_samples = 4 #@param {type:\"number\"}\n",
         "prompt = \"zebra\" #@param {type:\"string\"}\n",
+        "diffedit_reference_text = \"horse\" #@param {type:\"string\"}\n",
+        "diffedit_noise_ratio = 0.5 #@param {type:\"number\"}\n",
         "guidance_scale = 5 #@param {type:\"number\"}\n",
         "strength = 0.7 #@param {type:\"number\"}\n",
-        "diffedit_noise_ratio = 0.5 #@param {type:\"number\"}\n",
         "num_inference_steps = 50 #@param {type:\"number\"}\n",
         "height = 512 #@param {type:\"number\"}\n",
         "width = 512 #@param {type:\"number\"}\n",
@@ -156,6 +157,7 @@
         "        guidance_scale=guidance_scale,\n",
         "        strength=strength,\n",
         "        diffedit_noise_ratio=diffedit_noise_ratio,\n",
+        "        diffedit_reference_text=diffedit_reference_text,\n",
         "        generator=g_cuda\n",
         "    ).images\n",
         "\n",
