--- a/examples/unitune/Unitune_Stable_Diffusion.ipynb
+++ b/examples/unitune/Unitune_Stable_Diffusion.ipynb
@@ -150,7 +150,7 @@
     "MODEL_NAME = \"CompVis/stable-diffusion-v1-4\" #@param {type:\"string\"}\n",
     "\n",
     "#@markdown Target Text.\n",
-    "PLACEHOLDER_TOKENS = \"A bird spreading wings.\" #@param {type:\"string\"}\n",
+    "PLACEHOLDER_TOKENS = \"<AAA>,<BBB>,<CCC>\" #@param {type:\"string\"}\n",
     "\n",
     "#@markdown If model weights should be saved directly in google drive (takes around 4-5 GB).\n",
     "save_to_gdrive = True #@param {type:\"boolean\"}\n",
