Fix train unitune code

--- a/examples/unitune/Unitune_Stable_Diffusion.ipynb
+++ b/examples/unitune/Unitune_Stable_Diffusion.ipynb
@@ -28,15 +28,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "BzM7j0ZSc_9c"
-   },
-   "source": [
-    "https://github.com/ShivamShrirao/diffusers/tree/main/examples/unitune"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "wnTMyW41cC1E"
    },
    "source": [
@@ -52,9 +43,8 @@
    "outputs": [],
    "source": [
     "!wget -q https://github.com/katsugeneration/diffusers/raw/main/examples/unitune/train_unitune.py\n",
-    "%pip install -qq git+https://github.com/katsugeneration/diffusers\n",
     "%pip install -q -U --pre triton\n",
-    "%pip install -q accelerate==0.12.0 transformers ftfy bitsandbytes gradio"
+    "%pip install -q accelerate==0.12.0 transformers ftfy bitsandbytes diffusers"
    ]
   },
   {
@@ -227,7 +217,8 @@
     "  --resolution=512 \\\n",
     "  --mixed_precision=\"fp16\" \\\n",
     "  --use_8bit_adam \\\n",
-    "  --gradient_accumulation_steps=1 \\\n",
+    "  --gradient_checkpointing \\\n",
+    "  --gradient_accumulation_steps=4 \\\n",
     "  --learning_rate=1e-4 \\\n",
     "  --max_train_steps=64\n"
    ]
@@ -252,15 +243,13 @@
     "import os\n",
     "import torch\n",
     "from torch import autocast\n",
-    "from diffusers import StableDiffusionPipeline, DDIMScheduler\n",
+    "from diffusers import StableDiffusionImg2ImgPipeline, DDIMScheduler\n",
     "from IPython.display import display\n",
     "\n",
     "model_path = OUTPUT_DIR             # If you want to use previously trained model saved in gdrive, replace this with the full path of model in gdrive\n",
     "\n",
     "scheduler = DDIMScheduler(beta_start=0.00085, beta_end=0.012, beta_schedule=\"scaled_linear\", clip_sample=False, set_alpha_to_one=False)\n",
-    "pipe = StableDiffusionPipeline.from_pretrained(model_path, scheduler=scheduler, torch_dtype=torch.float16).to(\"cuda\")\n",
-    "target_embeddings = torch.load(os.path.join(model_path, \"target_embeddings.pt\")).to(\"cuda\")\n",
-    "optimized_embeddings = torch.load(os.path.join(model_path, \"optimized_embeddings.pt\")).to(\"cuda\")\n",
+    "pipe = StableDiffusionImg2ImgPipeline.from_pretrained(model_path, scheduler=scheduler, torch_dtype=torch.float16).to(\"cuda\")\n",
     "g_cuda = None"
    ]
   },
@@ -360,71 +349,31 @@
    ],
    "source": [
     "#@title Run for generating images.\n",
+    "from PIL import Image\n",
     "\n",
-    "alpha = 0.9 #@param {type:\"number\"}\n",
+    "prompt = \"drawn in style of illustration\" #@param {type:\"string\"}\n",
     "num_samples = 4 #@param {type:\"number\"}\n",
-    "guidance_scale = 3 #@param {type:\"number\"}\n",
+    "guidance_scale = 32 #@param {type:\"number\"}\n",
     "num_inference_steps = 50 #@param {type:\"number\"}\n",
     "height = 512 #@param {type:\"number\"}\n",
     "width = 512 #@param {type:\"number\"}\n",
+    "strength = 0.89 #@param {type:\"number\"}\n",
     "\n",
-    "edit_embeddings = alpha*target_embeddings + (1-alpha)*optimized_embeddings\n",
+    "print(\"prompt:\", PLACEHOLDER_TOKENS + \" \" + prompt)\n",
     "\n",
     "with autocast(\"cuda\"), torch.inference_mode():\n",
     "    images = pipe(\n",
-    "        text_embeddings=edit_embeddings,\n",
-    "        height=height,\n",
-    "        width=width,\n",
+    "        init_image=Image.open(INPUT_IMAGE).resize((height, width)),\n",
+    "        prompt=prompt,\n",
     "        num_images_per_prompt=num_samples,\n",
     "        num_inference_steps=num_inference_steps,\n",
     "        guidance_scale=guidance_scale,\n",
+    "        strength=strength,\n",
     "        generator=g_cuda\n",
     "    ).images\n",
     "\n",
     "for img in images:\n",
     "    display(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "cellView": "form",
-    "id": "WMCqQ5Tcdsm2"
-   },
-   "outputs": [],
-   "source": [
-    "#@markdown Run Gradio UI for generating images.\n",
-    "import gradio as gr\n",
-    "\n",
-    "def inference(alpha, num_samples, height=512, width=512, num_inference_steps=50, guidance_scale=7.5):\n",
-    "    with torch.autocast(\"cuda\"), torch.inference_mode():\n",
-    "        edit_embeddings = alpha*target_embeddings + (1-alpha)*optimized_embeddings\n",
-    "        return pipe(\n",
-    "                text_embeddings=edit_embeddings, height=int(height), width=int(width),\n",
-    "                num_images_per_prompt=int(num_samples),\n",
-    "                num_inference_steps=int(num_inference_steps), guidance_scale=guidance_scale,\n",
-    "                generator=g_cuda\n",
-    "            ).images\n",
-    "\n",
-    "with gr.Blocks() as demo:\n",
-    "    with gr.Row():\n",
-    "        with gr.Column():\n",
-    "            alpha = gr.Number(label=\"Prompt\", value=0.9)\n",
-    "            run = gr.Button(value=\"Generate\")\n",
-    "            with gr.Row():\n",
-    "                num_samples = gr.Number(label=\"Number of Samples\", value=4)\n",
-    "                guidance_scale = gr.Number(label=\"Guidance Scale\", value=3)\n",
-    "            with gr.Row():\n",
-    "                height = gr.Number(label=\"Height\", value=512)\n",
-    "                width = gr.Number(label=\"Width\", value=512)\n",
-    "            num_inference_steps = gr.Slider(label=\"Steps\", value=50)\n",
-    "        with gr.Column():\n",
-    "            gallery = gr.Gallery()\n",
-    "\n",
-    "    run.click(inference, inputs=[alpha, num_samples, height, width, num_inference_steps, guidance_scale], outputs=gallery)\n",
-    "\n",
-    "demo.launch(debug=True)"
    ]
   },
   {
