Update textual inversion code

--- a/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
+++ b/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
@@ -208,6 +208,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "jjcSXTp-u-Eg"
+   },
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.9.6 64-bit ('3.9.6')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/home/shimabukuro/.pyenv/versions/3.9.6/bin/python -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "!accelerate launch textual_inversion.py \\\n",
+    "  --pretrained_model_name_or_path=$MODEL_NAME \\\n",
+    "  --output_dir=\"{OUTPUT_DIR}_2\" \\\n",
+    "  --resume=$OUTPUT_DIR \\\n",
+    "  --learnable_property \"style\" \\\n",
+    "  --placeholder_token=\"{PLACEHOLDER_TOKEN}\" \\\n",
+    "  --initializer_token=\"{INITILIZER_TOKEN}\" \\\n",
+    "  --train_data_dir=\"{TRAIN_DATA_DIR}\" \\\n",
+    "  --train_unet \\\n",
+    "  --seed=42 \\\n",
+    "  --resolution=512 \\\n",
+    "  --gradient_accumulation_steps=4 \\\n",
+    "  --unet_learning_rate=1e-4 \\\n",
+    "  --max_train_steps=64 \\\n",
+    "  --train_batch_size 1\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "ToNG4fd_dTbF"
