Add textual inversion unet finetuning

--- a/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
+++ b/examples/textual_inversion/TEXTUAL_INVERSION.ipynb
@@ -235,11 +235,13 @@
     "  --initializer_token=\"{INITILIZER_TOKEN}\" \\\n",
     "  --train_data_dir=\"{TRAIN_DATA_DIR}\" \\\n",
     "  --train_unet \\\n",
+    "  --use_8bit_adam \\\n",
     "  --seed=42 \\\n",
     "  --resolution=512 \\\n",
+    "  --gradient_checkpointing \\\n",
     "  --gradient_accumulation_steps=4 \\\n",
     "  --unet_learning_rate=1e-4 \\\n",
-    "  --max_train_steps=64 \\\n",
+    "  --unet_max_train_steps=64 \\\n",
     "  --train_batch_size 1\n"
    ]
   },
