Update unitune parameter

--- a/examples/unitune/Unitune_Stable_Diffusion.ipynb
+++ b/examples/unitune/Unitune_Stable_Diffusion.ipynb
@@ -140,7 +140,7 @@
     "MODEL_NAME = \"CompVis/stable-diffusion-v1-4\" #@param {type:\"string\"}\n",
     "\n",
     "#@markdown Target Text.\n",
-    "PLACEHOLDER_TOKENS = \"<AAA>,<BBB>,<CCC>\" #@param {type:\"string\"}\n",
+    "PLACEHOLDER_TOKENS = \"<AAA> <BBB> <CCC>\" #@param {type:\"string\"}\n",
     "\n",
     "#@markdown If model weights should be saved directly in google drive (takes around 4-5 GB).\n",
     "save_to_gdrive = True #@param {type:\"boolean\"}\n",
@@ -353,13 +353,11 @@
     "\n",
     "prompt = \"drawn in style of illustration\" #@param {type:\"string\"}\n",
     "num_samples = 4 #@param {type:\"number\"}\n",
-    "guidance_scale = 32 #@param {type:\"number\"}\n",
+    "guidance_scale = 8 #@param {type:\"number\"}\n",
     "num_inference_steps = 50 #@param {type:\"number\"}\n",
     "height = 512 #@param {type:\"number\"}\n",
     "width = 512 #@param {type:\"number\"}\n",
-    "strength = 0.89 #@param {type:\"number\"}\n",
-    "\n",
-    "print(\"prompt:\", PLACEHOLDER_TOKENS + \" \" + prompt)\n",
+    "strength = 0.91 #@param {type:\"number\"}\n",
     "\n",
     "with autocast(\"cuda\"), torch.inference_mode():\n",
     "    images = pipe(\n",
