Update ldm clip trainer

--- a/examples/ldm_clip/LDM_CLIP.ipynb
+++ b/examples/ldm_clip/LDM_CLIP.ipynb
@@ -156,6 +156,9 @@
     "#@markdown Target Dataset.\n",
     "TARGET_DATASET = \"Imagenet\" #@param {type:\"string\"}\n",
     "\n",
+    "#@markdown Source Text.\n",
+    "SOURCE_TEXT = \"photo\" #@param {type:\"string\"}\n",
+    "\n",
     "#@markdown If model weights should be saved directly in google drive (takes around 4-5 GB).\n",
     "save_to_gdrive = True #@param {type:\"boolean\"}\n",
     "if save_to_gdrive:\n",
@@ -206,13 +209,14 @@
     "  --output_dir=$OUTPUT_DIR \\\n",
     "  --target_text=\"{TARGET_TEXT}\" \\\n",
     "  --target_dataset=\"{TARGET_DATASET}\" \\\n",
-    "  --style_img_dir=\"{STYLE_IMG_DIR}\" \\\n",
+    "  --source_text=\"{SOURCE_TEXT}\" \\\n",
     "  --seed=3434554 \\\n",
     "  --resolution=512 \\\n",
     "  --mixed_precision=\"fp16\" \\\n",
     "  --use_8bit_adam \\\n",
     "  --gradient_accumulation_steps=1 \\\n",
-    "  --emb_learning_rate=1e-3 \\\n",
+    "  --gradient_checkpointing \\\n",
+    "  --emb_learning_rate=8e-6 \\\n",
     "  --emb_train_steps=1000\n"
    ]
   },
