Update ldm clip trainer

--- a/examples/ldm_clip/LDM_CLIP.ipynb
+++ b/examples/ldm_clip/LDM_CLIP.ipynb
@@ -214,8 +214,10 @@
     "  --resolution=512 \\\n",
     "  --mixed_precision=\"fp16\" \\\n",
     "  --use_8bit_adam \\\n",
+    "  --train_batch_size 1 \\\n",
     "  --gradient_accumulation_steps=1 \\\n",
     "  --gradient_checkpointing \\\n",
+    "  --max_train_inference_steps 6 \\\n",
     "  --emb_learning_rate=8e-6 \\\n",
     "  --emb_train_steps=1000\n"
    ]
@@ -246,8 +248,7 @@
     "model_path = OUTPUT_DIR             # If you want to use previously trained model saved in gdrive, replace this with the full path of model in gdrive\n",
     "\n",
     "scheduler = DDIMScheduler(beta_start=0.00085, beta_end=0.012, beta_schedule=\"scaled_linear\", clip_sample=False, set_alpha_to_one=False)\n",
-    "pipe = StableDiffusionImg2ImgPipeline.from_pretrained(MODEL_NAME, scheduler=scheduler, torch_dtype=torch.float16).to(\"cuda\")\n",
-    "optimized_embeddings = torch.load(os.path.join(model_path, \"optimized_embeddings.pt\")).to(\"cuda\")\n",
+    "pipe = StableDiffusionImg2ImgPipeline.from_pretrained(model_path, scheduler=scheduler, torch_dtype=torch.float16).to(\"cuda\")\n",
     "g_cuda = None"
    ]
   },
@@ -375,8 +376,8 @@
     "\n",
     "with autocast(\"cuda\"), torch.inference_mode():\n",
     "    images = pipe(\n",
-    "        init_image=Image.open(INPUT_IMAGE),\n",
-    "        text_embeddings=optimized_embeddings,\n",
+    "        init_image=Image.open(INPUT_IMAGE).resize((height, width)),\n",
+    "        prompt=TARGET_TEXT,\n",
     "        height=height,\n",
     "        width=width,\n",
     "        num_images_per_prompt=num_samples,\n",
