Add l1 loss and update option default

--- a/examples/ldm_clip/LDM_CLIP.ipynb
+++ b/examples/ldm_clip/LDM_CLIP.ipynb
@@ -217,9 +217,10 @@
     "  --train_batch_size 1 \\\n",
     "  --gradient_accumulation_steps=1 \\\n",
     "  --gradient_checkpointing \\\n",
-    "  --max_train_inference_steps 6 \\\n",
-    "  --emb_learning_rate=8e-6 \\\n",
-    "  --emb_train_steps=1000\n"
+    "  --train_inference_steps 6 \\\n",
+    "  --learning_rate=8e-6 \\\n",
+    "  --max_train_steps=500 \\\n",
+    "  --l1_w 0.6\n"
    ]
   },
   {
@@ -370,6 +371,7 @@
     "\n",
     "num_samples = 4 #@param {type:\"number\"}\n",
     "guidance_scale = 3 #@param {type:\"number\"}\n",
+    "strength = 0.2 #@param {type:\"number\"}\n",
     "num_inference_steps = 50 #@param {type:\"number\"}\n",
     "height = 512 #@param {type:\"number\"}\n",
     "width = 512 #@param {type:\"number\"}\n",
@@ -383,53 +385,12 @@
     "        num_images_per_prompt=num_samples,\n",
     "        num_inference_steps=num_inference_steps,\n",
     "        guidance_scale=guidance_scale,\n",
+    "        strength=strength,\n",
     "        generator=g_cuda\n",
     "    ).images\n",
     "\n",
     "for img in images:\n",
     "    display(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "cellView": "form",
-    "id": "WMCqQ5Tcdsm2"
-   },
-   "outputs": [],
-   "source": [
-    "#@markdown Run Gradio UI for generating images.\n",
-    "import gradio as gr\n",
-    "\n",
-    "def inference(alpha, num_samples, height=512, width=512, num_inference_steps=50, guidance_scale=7.5):\n",
-    "    with torch.autocast(\"cuda\"), torch.inference_mode():\n",
-    "        edit_embeddings = alpha*target_embeddings + (1-alpha)*optimized_embeddings\n",
-    "        return pipe(\n",
-    "                text_embeddings=edit_embeddings, height=int(height), width=int(width),\n",
-    "                num_images_per_prompt=int(num_samples),\n",
-    "                num_inference_steps=int(num_inference_steps), guidance_scale=guidance_scale,\n",
-    "                generator=g_cuda\n",
-    "            ).images\n",
-    "\n",
-    "with gr.Blocks() as demo:\n",
-    "    with gr.Row():\n",
-    "        with gr.Column():\n",
-    "            alpha = gr.Number(label=\"Prompt\", value=0.9)\n",
-    "            run = gr.Button(value=\"Generate\")\n",
-    "            with gr.Row():\n",
-    "                num_samples = gr.Number(label=\"Number of Samples\", value=4)\n",
-    "                guidance_scale = gr.Number(label=\"Guidance Scale\", value=3)\n",
-    "            with gr.Row():\n",
-    "                height = gr.Number(label=\"Height\", value=512)\n",
-    "                width = gr.Number(label=\"Width\", value=512)\n",
-    "            num_inference_steps = gr.Slider(label=\"Steps\", value=50)\n",
-    "        with gr.Column():\n",
-    "            gallery = gr.Gallery()\n",
-    "\n",
-    "    run.click(inference, inputs=[alpha, num_samples, height, width, num_inference_steps, guidance_scale], outputs=gallery)\n",
-    "\n",
-    "demo.launch(debug=True)"
    ]
   },
   {
