Add OpenImages dataset target

--- a/examples/ldm_clip/LDM_CLIP.ipynb
+++ b/examples/ldm_clip/LDM_CLIP.ipynb
@@ -55,7 +55,7 @@
     "!wget -q https://github.com/katsugeneration/diffusers/raw/main/examples/ldm_clip/clip_loss.py\n",
     "%pip install -qq git+https://github.com/katsugeneration/diffusers\n",
     "%pip install -q -U --pre triton\n",
-    "%pip install -q accelerate==0.12.0 transformers ftfy bitsandbytes gradio datasets datasets[vision]"
+    "%pip install -q accelerate==0.12.0 transformers ftfy bitsandbytes gradio datasets datasets[vision] fiftyone"
    ]
   },
   {
@@ -151,10 +151,10 @@
     "MODEL_NAME = \"CompVis/stable-diffusion-v1-4\" #@param {type:\"string\"}\n",
     "\n",
     "#@markdown Target Text.\n",
-    "TARGET_TEXT = \"illustration\" #@param {type:\"string\"}\n",
+    "TARGET_TEXT = \"painting in style of oil paint\" #@param {type:\"string\"}\n",
     "\n",
     "#@markdown Target Dataset.\n",
-    "TARGET_DATASET = \"Imagenet\" #@param {type:\"string\"}\n",
+    "TARGET_DATASET = \"OpenImages\" #@param {type:\"string\"}\n",
     "\n",
     "#@markdown Source Text.\n",
     "SOURCE_TEXT = \"photo\" #@param {type:\"string\"}\n",
@@ -221,7 +221,7 @@
     "  --ddim_steps 50 \\\n",
     "  --learning_rate=8e-6 \\\n",
     "  --max_train_steps=300 \\\n",
-    "  --l1_w 1.0\n"
+    "  --l1_w 2.0\n"
    ]
   },
   {
