Add module install

--- a/examples/ldm_clip/LDM_CLIP.ipynb
+++ b/examples/ldm_clip/LDM_CLIP.ipynb
@@ -204,6 +204,8 @@
    },
    "outputs": [],
    "source": [
+    "import fiftyone.zoo as foz\n",
+    "\n",
     "!accelerate launch train_ldm_clip.py \\\n",
     "  --pretrained_model_name_or_path=$MODEL_NAME \\\n",
     "  --output_dir=$OUTPUT_DIR \\\n",
@@ -311,7 +313,7 @@
     "from PIL import Image\n",
     "\n",
     "num_samples = 4 #@param {type:\"number\"}\n",
-    "guidance_scale =1 #@param {type:\"number\"}\n",
+    "guidance_scale = 1 #@param {type:\"number\"}\n",
     "strength = 0.2 #@param {type:\"number\"}\n",
     "num_inference_steps = 200 #@param {type:\"number\"}\n",
     "height = 512 #@param {type:\"number\"}\n",
