Add guidance_scale and schedular_offset option

--- a/examples/ldm_clip/LDM_CLIP.ipynb
+++ b/examples/ldm_clip/LDM_CLIP.ipynb
@@ -223,7 +223,8 @@
     "  --ddim_steps 50 \\\n",
     "  --learning_rate=8e-6 \\\n",
     "  --max_train_steps=300 \\\n",
-    "  --l1_w 1.0\n"
+    "  --l1_w 1.0 \\\n",
+    "  --guidance_scale 8\n"
    ]
   },
   {
