--- a/examples/ldm_clip/LDM_CLIP.ipynb
+++ b/examples/ldm_clip/LDM_CLIP.ipynb
@@ -53,6 +53,7 @@
    "source": [
     "!wget -q https://github.com/katsugeneration/diffusers/raw/main/examples/ldm_clip/train_ldm_clip.py\n",
     "!wget -q https://github.com/katsugeneration/diffusers/raw/main/examples/ldm_clip/clip_loss.py\n",
+    "!wget -q https://github.com/katsugeneration/diffusers/raw/main/examples/ldm_clip/vae.py\n",
     "%pip install -qq git+https://github.com/katsugeneration/diffusers\n",
     "%pip install -q -U --pre triton\n",
     "%pip install -q accelerate==0.12.0 transformers ftfy bitsandbytes gradio datasets datasets[vision] fiftyone"
@@ -214,13 +215,13 @@
     "  --source_text=\"{SOURCE_TEXT}\" \\\n",
     "  --seed=3434554 \\\n",
     "  --resolution=512 \\\n",
-    "  --mixed_precision=\"fp16\" \\\n",
+    "  --mixed_precision=\"no\" \\\n",
     "  --use_8bit_adam \\\n",
     "  --train_batch_size 1 \\\n",
     "  --gradient_accumulation_steps=1 \\\n",
     "  --gradient_checkpointing \\\n",
     "  --train_inference_steps 5 \\\n",
-    "  --ddim_steps 50 \\\n",
+    "  --ddim_steps 15 \\\n",
     "  --learning_rate=8e-6 \\\n",
     "  --max_train_steps=300 \\\n",
     "  --l1_w 1.0 \\\n",
@@ -314,8 +315,8 @@
     "from PIL import Image\n",
     "\n",
     "num_samples = 4 #@param {type:\"number\"}\n",
-    "guidance_scale = 1 #@param {type:\"number\"}\n",
-    "strength = 0.2 #@param {type:\"number\"}\n",
+    "guidance_scale = 8 #@param {type:\"number\"}\n",
+    "strength = 0.3 #@param {type:\"number\"}\n",
     "num_inference_steps = 200 #@param {type:\"number\"}\n",
     "height = 512 #@param {type:\"number\"}\n",
     "width = 512 #@param {type:\"number\"}\n",
